--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     </style>
 </head>
 <body>
-    <!-- <h1 class="h">Hello There!</h1> -->
-    <script src="calc.js" async></script>
+    <script src="app.js" async></script>
 </body>
 </html>
